--- a/4080 - Flask/_4080___Flask/templates/photos.html
+++ b/4080 - Flask/_4080___Flask/templates/photos.html
@@ -6,13 +6,13 @@
 <h3>{{ message }}</h3>
 
 
-<h1 style="color:	Magenta">Eden Album</h1>
+<h1 style="color: SlateBlue">Eden Album</h1>
 <h3>{{ message }}</h3>
 <h1>Toy story 4</h1>
 <style type="text/css">
 
     body {
-        background-color: AliceBlue;
+        background-color: Violet;
     }
 </style>
 
